@@ -36,7 +36,6 @@ Installation:
       unix/              installing on Unix (including Mac OS/X)
       os2/               installing on OS/2
       win32msvc/         installing on Win32, using MSVC
-      win32bc/           installing on Win32, using Borland C/C++
 
 Other:
 
@@ -56,7 +55,7 @@ Installation:
 For instruction on how to install CLISP
 * on Unix: see file unix/INSTALL.
 * on OS/2: see file os2/INSTALL,
-* on Win32 (WinNT, Win95): see files win32msvc/INSTALL and win32bc/INSTALL.
+* on Win32 (WinNT, Win95): see file win32msvc/INSTALL.
 
 
 Authors:
